--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.24.0",
     "react-router-hash-link": "^2.4.3",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "three": "^0.165.0"
+    "three": "^0.165.0",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
